--- a/Multi-Column-Select/Multi-Column-Select.css
+++ b/Multi-Column-Select/Multi-Column-Select.css
@@ -1,4 +1,11 @@
-
+html,body{
+    background:#5f7a87;
+    margin:0;
+    padding:0;
+}
+#selectcontrol, #selectcontrolm{
+    margin-bottom:10px;
+}
 /*The container that holds the dropdown items*/
 .menucontainer{
     	width:100%;
@@ -6,7 +13,7 @@
 	overflow:hidden;
         background:#222;
         box-sizing: border-box;
-        display:none;        
+        display:none;
 }
 
 /*The menu items (options)*/
@@ -22,6 +29,7 @@
 	line-height: 50px;
 	text-align: center;
         border:1px solid #111;
+        
 }
 
 .openmenubutton{
@@ -29,6 +37,7 @@
         text-align: left;
         padding: 0 10px 0 40px;
 	width:100%;
+        margin-top:20px;
 }
 
 .openmenubutton.open{
@@ -46,26 +55,13 @@
 	border:1px solid #222;
 }
 
-form input[type=submit]{
-    border:0;
-    display: block;
-    width:100%;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    background: #00ada9;
-    color: #FFF;
-    margin-top: 20px;
-    
-}
 
 .menuitem:hover,
 .openmenubutton:hover{
 background:#00ada9;
 cursor:pointer;
-color:#ffffff;
 }
-form input[type=submit]:hover{
+input[type=submit]:hover{
 cursor:pointer;
 background:#293b47;
 }
@@ -75,6 +71,7 @@ background:#293b47;
 	visibility: hidden;
 	height: 0px;
 	width:0px;
+	position:absolute;
 }
 
 /*Clear class used to push float- can just point to an exsisting clear class*/
@@ -85,7 +82,7 @@ background:#293b47;
 
 
 .wrapper{
-    width:460px;
+    width:580px;
     padding:20px;
     margin: 0 auto;
     text-align: center;
@@ -93,6 +90,11 @@ background:#293b47;
 
 header h1{
     font-size:3em;
+    color:#ffffff;
+    font-family: 'Ubuntu Condensed', sans-serif;
+}
+h2{
+       font-size:2em;
     color:#ffffff;
     font-family: 'Ubuntu Condensed', sans-serif;
 }
@@ -130,14 +132,9 @@ header h1{
 }
 .menuitem.active{
     text-shadow: 0 0 0 #FFF;
-    color:#293b47;
 }
 .menuitem.active:hover{
     background:#FFF;
     text-shadow: 0 0 0 #FFF;
 }
 
-input[type=submit]{
-        font-family: 'Ubuntu Condensed', sans-serif;
-        font-size:1em;
-}
