--- a/Multi-Column-Select/Multi-Column-Select.css
+++ b/Multi-Column-Select/Multi-Column-Select.css
@@ -1,11 +1,7 @@
-
-#selectcontrol, #selectcontrolm{
-    margin-bottom:10px;
-}
 /*The container that holds the dropdown items*/
 .menucontainer{
     	width:100%;
-        padding:20px;
+        padding:0px;
 	overflow:hidden;
         background:#222;
         box-sizing: border-box;
@@ -29,17 +25,17 @@
 }
 
 .openmenubutton{
-    border: 0;
+	border: 0;
         text-align: left;
-        padding: 0 10px 0 40px;
 	width:100%;
-        margin-top:20px;
+
 }
 
 .openmenubutton.open{
     background:#ffffff;
     color:#111;
 }
+
 .openmenubutton.open:hover{
     background:#00ada9;
     color:#FFF;
@@ -75,8 +71,7 @@ cursor:pointer;
 
 
 .wrapper{
-    width:580px;
-    padding:20px;
+    width:100%;
     margin: 0 auto;
     text-align: center;
 }
