--- a/Multi-Column-Select/Multi-Column-Select.css
+++ b/Multi-Column-Select/Multi-Column-Select.css
@@ -6,6 +6,11 @@
         background:#222;
         box-sizing: border-box;
         display:none;
+                -webkit-transition: all 300ms ease;
+        -moz-transition: all 300ms ease;
+        -ms-transition: all 300ms ease;
+        -o-transition: all 300ms ease;
+        transition: all 300ms ease;
 }
 
 /*The menu items (options)*/
