--- a/Multi-Column-Select/Multi-Column-Select.css
+++ b/Multi-Column-Select/Multi-Column-Select.css
@@ -5,18 +5,20 @@ html,body{
 }
 
 /*The container that holds the dropdown items*/
-.menucontainer{
+.mcs-container{
     	width:100%;
-        padding:20px;
 	overflow:hidden;
         background:#222;
         box-sizing: border-box;
-        display:none;        
+        display:none;
+        position: relative;
+        padding:10px;
+        clear:both;
 }
 
 /*The menu items (options)*/
-.openmenubutton,
-.menuitem{
+.mcs-open,
+.mcs-item{
 	box-sizing: border-box;
 	background:#293b47;
 	color:#FFF;    
@@ -27,25 +29,27 @@ html,body{
 	line-height: 50px;
 	text-align: center;
         border:1px solid #111;
+        
 }
 
-.openmenubutton{
+.mcs-open{
     border: 0;
         text-align: left;
         padding: 0 10px 0 40px;
 	width:100%;
+        margin-top:20px;
 }
 
-.openmenubutton.open{
+.mcs-open.open{
     background:#ffffff;
     color:#111;
 }
-.openmenubutton.open:hover{
+.mcs-open.open:hover{
     background:#00ada9;
     color:#FFF;
 }
 
-.menuitem.active{
+.mcs-item.active{
 	background:#e8e8e8;
 	color:#222;
 	border:1px solid #222;
@@ -60,12 +64,13 @@ input[type=submit]{
     text-align: center;
     background: #00ada9;
     color: #FFF;
-    margin-top: 20px;
+    clear:both;
+
     
 }
 
-.menuitem:hover,
-.openmenubutton:hover{
+.mcs-item:hover,
+.mcs-open:hover{
 background:#00ada9;
 cursor:pointer;
 }
@@ -79,7 +84,7 @@ background:#293b47;
 	visibility: hidden;
 	height: 0px;
 	width:0px;
-
+	position:absolute;
 }
 
 /*Clear class used to push float- can just point to an exsisting clear class*/
@@ -87,7 +92,6 @@ background:#293b47;
 	display:block;
 	clear:both;
 }
-
 
 
 .wrapper{
@@ -102,13 +106,18 @@ header h1{
     color:#ffffff;
     font-family: 'Ubuntu Condensed', sans-serif;
 }
+h2{
+       font-size:2em;
+    color:#ffffff;
+    font-family: 'Ubuntu Condensed', sans-serif;
+}
 
-.openmenubutton{
+.mcs-open{
         font-family: 'Ubuntu Condensed', sans-serif;
         font-size:1em;
 }           
 
-.menuitem{
+.mcs-item{
     font-family: 'Ubuntu', sans-serif;
     font-size:0.8em;
         -moz-transform: scale(0.95) rotate(0deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
@@ -127,17 +136,17 @@ header h1{
         -webkit-box-shadow: 0 0 4px 1px rgba(0,0,0,0.4);
         box-shadow: 0 0 4px 1px rgba(0,0,0,0.4);
 }
-.menuitem:hover{
+.mcs-item:hover{
         -moz-transform: scale(1) rotate(-3deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
         -webkit-transform: scale(1) rotate(-3deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
         -o-transform: scale(1) rotate(-3deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
         -ms-transform: scale(1) rotate(-3deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
         transform: scale(1) rotate(-3deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
 }
-.menuitem.active{
+.mcs-item.active{
     text-shadow: 0 0 0 #FFF;
 }
-.menuitem.active:hover{
+.mcs-item.active:hover{
     background:#FFF;
     text-shadow: 0 0 0 #FFF;
 }
